automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>IceBreakers</title>
+    <style>
+    p { 
+    <h1> font-size: 60px
+    }
+    </style>
+     <title>IceBreakers</title>
   </head>
   <body>
     <header>
