automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <style>
-    p { 
-    <h1> font-size: 60px
+    p {
+    <h1> font-size: 60px;
+         font-family: "Helvetica", "Arial", "sans-serif";
     }
     </style>
      <title>IceBreakers</title>
