automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
   <head>
     <style>
-    p {
-    <h1> font-size: 60px;
-         font-family: "Helvetica", "Arial", "sans-serif";
-    </h1>     
-    }
+    <h1>{
+     font-size: 60px;
+         font-family: "Helvetica", "Arial", "sans-serif";   
+        }
     </style>
      <title>IceBreakers</title>
   </head>
