--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style>
     h1{
          font-size: 60px;
+         font-weight: 300;
          font-family: "Helvetica", "Arial", "sans-serif";
         }
     </style>
